[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-validator"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"
default-run = "solana-validator"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.1"
console = "0.14.1"
core_affinity = "0.5.10"
fd-lock = "2.0.0"
indicatif = "0.15.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-server-utils= "18.0.0"
log = "0.4.11"
num_cpus = "1.13.0"
rand = "0.7.0"
serde = "1.0.112"
serde_json = "1.0.68"
solana-clap-utils = {git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-cli-config = { git = "https://github.com/solindex/cli-config.git", version = "=1.8.14" }
solana-client = { git = "https://github.com/solindex/client.git", version = "=1.8.14" }
solana-core = { git = "https://github.com/solindex/core.git", version = "=1.8.14" }
solana-download-utils = { git = "https://github.com/solindex/download-utils.git", version = "=1.8.14" }
solana-faucet = { git = "https://github.com/solindex/faucet.git", version = "=1.8.14" }
solana-genesis-utils = { git = "https://github.com/solindex/genesis-utils.git", version = "=1.8.14" }
solana-gossip = { git = "https://github.com/solindex/gossip.git", version = "=1.8.14" }
solana-ledger = { git = "https://github.com/solindex/ledger.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-net-utils = { git = "https://github.com/solindex/net-utils.git", version = "=1.8.14" }
solana-perf = { git = "https://github.com/solindex/perf.git", version = "=1.8.14" }
solana-poh = { git = "https://github.com/solindex/poh.git", version = "=1.8.14" }
solana-rpc = { git = "https://github.com/solindex/rpc.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-streamer = { git = "https://github.com/solindex/streamer.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
symlink = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = {package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"]}

[target."cfg(unix)".dependencies]
libc = "0.2.81"
signal-hook = "0.1.15"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
